connected GroupConfigScreen, RemoveUserScreen to backend